--- a/Project_2/Google_API.ipynb
+++ b/Project_2/Google_API.ipynb
@@ -18,8 +18,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "file1 = open(\"test.txt\",\"r+\")\r\n",
-    "text = file1.readline()"
+    "file = open(\"Google_API_test.txt\",\"r+\")\r\n",
+    "text = file.readline()"
    ],
    "outputs": [],
    "metadata": {}
@@ -55,7 +55,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "file1.close()"
+    "file.close()"
    ],
    "outputs": [],
    "metadata": {}
