--- a/Project_2/Google_API.ipynb
+++ b/Project_2/Google_API.ipynb
@@ -4,12 +4,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from google.cloud import language\r\n",
     "from google.cloud import language_v1\r\n",
-    "from google.cloud.language import enums\r\n",
-    "from google.cloud.language import types\r\n",
-    "from google.cloud.language_v1 import enums\r\n",
-    "import sys"
+    "from google.cloud.language_v1 import enums"
    ],
    "outputs": [],
    "metadata": {}
@@ -30,9 +26,9 @@
    "source": [
     "client = language_v1.LanguageServiceClient()\r\n",
     "type_ = enums.Document.Type.PLAIN_TEXT\r\n",
-    "document = {\"content\": text, \"type\": type_}\r\n",
+    "document = {\"content\": text, \"type\": type_}  #automately detact language\r\n",
     "\r\n",
-    "encoding_type = enums.EncodingType.UTF8\r\n",
+    "encoding_type = enums.EncodingType.UTF16\r\n",
     "response = client.analyze_sentiment(document, encoding_type=encoding_type)\r\n",
     "\r\n",
     "# Get sentiment of  sentences \r\n",
@@ -47,15 +43,6 @@
     "\r\n",
     "#Get language of text\r\n",
     "print(u\"Language: {}\".format(response.language))\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "file.close()"
    ],
    "outputs": [],
    "metadata": {}
