--- a/Project_2/Twitter_API.ipynb
+++ b/Project_2/Twitter_API.ipynb
@@ -3,60 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "source": [
-    "import tweepy\r\n",
-    "from tweepy import OAuthHandler\r\n",
-    "from tweepy import API\r\n",
-    "from tweepy import Stream\r\n",
-    "import json\r\n",
-    "import os\r\n",
-    "import sys\r\n",
-    "from geopy.geocoders import Nominatim\r\n",
-    "from TwitterAPI import TwitterAPI\r\n",
-    "\r\n",
-    "access_key=\"\"\r\n",
-    "access_secret=\"\"\r\n",
-    "consumer_key=\"\"\r\n",
-    "consumer_secret=\"\"\r\n",
-    "\r\n",
-    "auth= tweepy.OAuthHandler(consumer_key,consumer_secret)\r\n",
-    "auth.set_access_token(access_key, access_secret)\r\n",
-    "api = tweepy.API(auth, wait_on_rate_limit=True)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import tweepy\n",
+    "from tweepy import OAuthHandler\n",
+    "from tweepy import API\n",
+    "from tweepy import Stream\n",
+    "import json\n",
+    "import os\n",
+    "import sys\n",
+    "from geopy.geocoders import Nominatim\n",
+    "from TwitterAPI import TwitterAPI\n",
+    "\n",
+    "access_key=\"\"\n",
+    "access_secret=\"\"\n",
+    "consumer_key=\"\"\n",
+    "consumer_secret=\"\"\n",
+    "\n",
+    "auth= tweepy.OAuthHandler(consumer_key,consumer_secret)\n",
+    "auth.set_access_token(access_key, access_secret)\n",
+    "api = tweepy.API(auth, wait_on_rate_limit=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 125,
-   "source": [
-    "####(1) get the timeline of a user###\r\n",
-    "\r\n",
-    "# screen name of the account to be fetched\r\n",
-    "screen_name = \"JessicaXinH\"\r\n",
-    "  \r\n",
-    "# fetching the statuses\r\n",
-    "statuses = api.user_timeline(screen_name)\r\n",
-    "\r\n",
-    "#export results to a txt file\r\n",
-    "print(screen_name + \": \" + str(len(statuses)) + \" number of statuses have been fetched.\")\r\n",
-    "lines = [screen_name + 'Timeline', str(statuses)]\r\n",
-    "with open(screen_name+'_Timeline.txt', 'w') as f:\r\n",
-    "    for line in lines:\r\n",
-    "        f.write(line)\r\n",
-    "        f.write('\\n')\r\n",
-    "print(screen_name+'_Timeline.txt')\r\n",
-    "\r\n",
-    "print(\"Print 20 most recent statuses\")\r\n",
-    "count = 0\r\n",
-    "for status in statuses:\r\n",
-    "    count = count + 1\r\n",
-    "    print(str(count) + status.text, end = \"\\n\")"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "JessicaXinH: 18 number of statuses have been fetched.\n",
       "JessicaXinH_Timeline.txt\n",
@@ -82,28 +59,39 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "####(1) get the timeline of a user###\n",
+    "\n",
+    "# screen name of the account to be fetched\n",
+    "screen_name = \"JessicaXinH\"\n",
+    "  \n",
+    "# fetching the statuses\n",
+    "statuses = api.user_timeline(screen_name)\n",
+    "\n",
+    "#export results to a txt file\n",
+    "print(screen_name + \": \" + str(len(statuses)) + \" number of statuses have been fetched.\")\n",
+    "lines = [screen_name + 'Timeline', str(statuses)]\n",
+    "with open(screen_name+'_Timeline.txt', 'w') as f:\n",
+    "    for line in lines:\n",
+    "        f.write(line)\n",
+    "        f.write('\\n')\n",
+    "print(screen_name+'_Timeline.txt')\n",
+    "\n",
+    "print(\"Print 20 most recent statuses\")\n",
+    "count = 0\n",
+    "for status in statuses:\n",
+    "    count = count + 1\n",
+    "    print(str(count) + status.text, end = \"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 74,
-   "source": [
-    "###(2)Get trending tweets of all countries###\r\n",
-    "\r\n",
-    "trend = api.trends_available()\r\n",
-    "# writing a JSON file that has the available trends around the world\r\n",
-    "with open(\"Trend.json\",\"w\") as wp:\r\n",
-    "    wp.write(json.dumps(trend, indent=1))\r\n",
-    "\r\n",
-    "  \r\n",
-    "print(\"Top 10 locations are : \")\r\n",
-    "for i in range(0, 11):\r\n",
-    "    print( str(i) + \": \" + trend[i]['country'] + \", \" + trend[i]['name'])"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Top 10 locations are : \n",
       "0: , Worldwide\n",
@@ -120,91 +108,103 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "###(2)Get trending tweets of all countries###\n",
+    "\n",
+    "trend = api.trends_available()\n",
+    "# writing a JSON file that has the available trends around the world\n",
+    "with open(\"Trend.json\",\"w\") as wp:\n",
+    "    wp.write(json.dumps(trend, indent=1))\n",
+    "\n",
+    "  \n",
+    "print(\"Top 10 locations are : \")\n",
+    "for i in range(0, 11):\n",
+    "    print( str(i) + \": \" + trend[i]['country'] + \", \" + trend[i]['name'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 96,
-   "source": [
-    "###(3)Get trending tweets of a city###\r\n",
-    "address='Boston'\r\n",
-    "geolocator = Nominatim(user_agent=\"Your_Name\")\r\n",
-    "location = geolocator.geocode(address)\r\n",
-    "print(location.address)\r\n",
-    "print((location.latitude, location.longitude))\r\n",
-    "closest_loc = api.trends_closest(location.latitude, location.longitude)\r\n",
-    "trend = api.trends_place(closest_loc[0]['woeid'])\r\n",
-    "\r\n",
-    "# writing a JSON file that has the latest trends for that city\r\n",
-    "with open(address + \"_twitter_trend.json\",\"w\") as wp:\r\n",
-    "    wp.write(json.dumps(trend, indent=1))\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Boston, Suffolk County, Massachusetts, United States\n",
       "(42.3602534, -71.0582912)\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "###(3)Get trending tweets of a city###\n",
+    "address='Boston'\n",
+    "geolocator = Nominatim(user_agent=\"Your_Name\")\n",
+    "location = geolocator.geocode(address)\n",
+    "print(location.address)\n",
+    "print((location.latitude, location.longitude))\n",
+    "closest_loc = api.trends_closest(location.latitude, location.longitude)\n",
+    "trend = api.trends_place(closest_loc[0]['woeid'])\n",
+    "\n",
+    "# writing a JSON file that has the latest trends for that city\n",
+    "with open(address + \"_twitter_trend.json\",\"w\") as wp:\n",
+    "    wp.write(json.dumps(trend, indent=1))\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 131,
-   "source": [
-    "###(4)count number of hashtags###\r\n",
-    "count = 0\r\n",
-    "skip = 0\r\n",
-    "\r\n",
-    "api = TwitterAPI(consumer_key, consumer_secret, access_key, access_secret)\r\n",
-    "r = api.request('statuses/filter', {'track':'apple'})\r\n",
-    "for item in r:\r\n",
-    "    if 'text' in item:\r\n",
-    "        count += 1\r\n",
-    "    elif 'limit' in item:\r\n",
-    "        skip = item['limit'].get('track')\r\n",
-    "    elif 'disconnect' in item:\r\n",
-    "        break\r\n",
-    "    print(item)\r\n",
-    "    if count == 1:\r\n",
-    "        break"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "{'created_at': 'Mon Sep 27 01:38:54 +0000 2021', 'id': 1442302697172914178, 'id_str': '1442302697172914178', 'text': 'RT @BTSChartDailyx: 🇺🇸 US Apple Music  \\n\\n#92. Coldplay x BTS — My Universe (+1)\\nhttps://t.co/X675acTPvQ', 'source': '<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>', 'truncated': False, 'in_reply_to_status_id': None, 'in_reply_to_status_id_str': None, 'in_reply_to_user_id': None, 'in_reply_to_user_id_str': None, 'in_reply_to_screen_name': None, 'user': {'id': 1203387619612086272, 'id_str': '1203387619612086272', 'name': 'ᴮᴱEternally⁷ ᴾᵀᴰ', 'screen_name': 'imissyouBTS', 'location': None, 'url': None, 'description': '~ 💜Loves BTS & Proud BTSARMY💜~ Undeniably OT7💜~ Grammy nominated artists’s fan 💜~ |toxic shippers❌,solos❌,mantis❌|', 'translator_type': 'none', 'protected': False, 'verified': False, 'followers_count': 122, 'friends_count': 268, 'listed_count': 0, 'favourites_count': 28056, 'statuses_count': 34456, 'created_at': 'Sat Dec 07 18:55:49 +0000 2019', 'utc_offset': None, 'time_zone': None, 'geo_enabled': False, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'profile_background_color': 'F5F8FA', 'profile_background_image_url': '', 'profile_background_image_url_https': '', 'profile_background_tile': False, 'profile_link_color': '1DA1F2', 'profile_sidebar_border_color': 'C0DEED', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': True, 'profile_image_url': 'http://pbs.twimg.com/profile_images/1442133320255475723/7ZEIMtL9_normal.jpg', 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1442133320255475723/7ZEIMtL9_normal.jpg', 'profile_banner_url': 'https://pbs.twimg.com/profile_banners/1203387619612086272/1632408445', 'default_profile': True, 'default_profile_image': False, 'following': None, 'follow_request_sent': None, 'notifications': None, 'withheld_in_countries': []}, 'geo': None, 'coordinates': None, 'place': None, 'contributors': None, 'retweeted_status': {'created_at': 'Mon Sep 27 01:13:55 +0000 2021', 'id': 1442296409479434246, 'id_str': '1442296409479434246', 'text': '🇺🇸 US Apple Music  \\n\\n#92. Coldplay x BTS — My Universe (+1)\\nhttps://t.co/X675acTPvQ', 'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>', 'truncated': False, 'in_reply_to_status_id': None, 'in_reply_to_status_id_str': None, 'in_reply_to_user_id': None, 'in_reply_to_user_id_str': None, 'in_reply_to_screen_name': None, 'user': {'id': 973338313661861889, 'id_str': '973338313661861889', 'name': 'BTSChartDaily⁷🐙💜', 'screen_name': 'BTSChartDailyx', 'location': '🔔 Turn the notifications', 'url': 'https://bts.lnk.to/ptd', 'description': 'Fan account /Charts/News ✨@BTS_twt', 'translator_type': 'none', 'protected': False, 'verified': False, 'followers_count': 434814, 'friends_count': 37, 'listed_count': 3078, 'favourites_count': 2441, 'statuses_count': 17921, 'created_at': 'Mon Mar 12 23:21:52 +0000 2018', 'utc_offset': None, 'time_zone': None, 'geo_enabled': True, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'profile_background_color': 'F5F8FA', 'profile_background_image_url': '', 'profile_background_image_url_https': '', 'profile_background_tile': False, 'profile_link_color': '1DA1F2', 'profile_sidebar_border_color': 'C0DEED', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': True, 'profile_image_url': 'http://pbs.twimg.com/profile_images/1437427947728744449/v66YY75s_normal.jpg', 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1437427947728744449/v66YY75s_normal.jpg', 'profile_banner_url': 'https://pbs.twimg.com/profile_banners/973338313661861889/1631544462', 'default_profile': True, 'default_profile_image': False, 'following': None, 'follow_request_sent': None, 'notifications': None, 'withheld_in_countries': []}, 'geo': None, 'coordinates': None, 'place': None, 'contributors': None, 'is_quote_status': False, 'quote_count': 14, 'reply_count': 6, 'retweet_count': 371, 'favorite_count': 867, 'entities': {'hashtags': [], 'urls': [{'url': 'https://t.co/X675acTPvQ', 'expanded_url': 'https://music.apple.com/gb/album/my-universe/1586356904?i=1586356916', 'display_url': 'music.apple.com/gb/album/my-un…', 'indices': [60, 83]}], 'user_mentions': [], 'symbols': []}, 'favorited': False, 'retweeted': False, 'possibly_sensitive': False, 'filter_level': 'low', 'lang': 'en'}, 'is_quote_status': False, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'entities': {'hashtags': [], 'urls': [{'url': 'https://t.co/X675acTPvQ', 'expanded_url': 'https://music.apple.com/gb/album/my-universe/1586356904?i=1586356916', 'display_url': 'music.apple.com/gb/album/my-un…', 'indices': [80, 103]}], 'user_mentions': [{'screen_name': 'BTSChartDailyx', 'name': 'BTSChartDaily⁷🐙💜', 'id': 973338313661861889, 'id_str': '973338313661861889', 'indices': [3, 18]}], 'symbols': []}, 'favorited': False, 'retweeted': False, 'possibly_sensitive': False, 'filter_level': 'low', 'lang': 'en', 'timestamp_ms': '1632706734351'}\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "###(4)count number of hashtags###\n",
+    "count = 0\n",
+    "skip = 0\n",
+    "\n",
+    "api = TwitterAPI(consumer_key, consumer_secret, access_key, access_secret)\n",
+    "r = api.request('statuses/filter', {'track':'apple'})\n",
+    "for item in r:\n",
+    "    if 'text' in item:\n",
+    "        count += 1\n",
+    "    elif 'limit' in item:\n",
+    "        skip = item['limit'].get('track')\n",
+    "    elif 'disconnect' in item:\n",
+    "        break\n",
+    "    print(item)\n",
+    "    if count == 1:\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "788c7a583b49e0f108948e9844ef083ea97a54690da4d8e91da56fd70fa16a57"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit"
-  },
-  "interpreter": {
-   "hash": "788c7a583b49e0f108948e9844ef083ea97a54690da4d8e91da56fd70fa16a57"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
