--- a/project_3/phase_1.ipynb
+++ b/project_3/phase_1.ipynb
@@ -22,7 +22,7 @@
     "import numpy as np\n",
     "import argparse\n",
     "from google.cloud import language_v1\n",
-    "#from google.cloud.language_v1 import enums\n",
+    "from google.cloud.language_v1 import enums\n",
     "import tweepy\n",
     "import matplotlib.pyplot as plt\n",
     "import pytest"
@@ -34,10 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "access_key=\"1441540497370083328-aa1BRomQRgXTCd0THU8nn7UBYVhhuo\"\n",
-    "access_secret=\"Iy4XfsTtQC3yj5EF8RnKGmjQ8eBuWI1mCUtWwDb1eh59S\"\n",
-    "consumer_key=\"1RxkQe0S4ziCahxUtgYorGtLp\"\n",
-    "consumer_secret=\"BGbPeSlhFZRCmUkyQhULTdbRPD2ohjwM2MORUKfaydTYkN8zW6\"\n",
+    "access_key=\n",
+    "access_secret=\n",
+    "consumer_key=\n",
+    "consumer_secret=\n",
     "\n",
     "auth= tweepy.OAuthHandler(consumer_key,consumer_secret)\n",
     "auth.set_access_token(access_key, access_secret)\n",
