--- a/Project_1/code/Predicetion.ipynb
+++ b/Project_1/code/Predicetion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -263,18 +263,6 @@
      "output_type": "stream",
      "text": [
       "Naive Bayes\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-7bff279f0a54>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_vec\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTrain_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_vec\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0maccuracy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maccuracy_cal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrue_score\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;31m# csv Naive Bayes Prediction------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0moutput_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"perdiction_NaBa\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPredict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredict_vec\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtrue_score\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-7-21ff1edab527>\u001b[0m in \u001b[0;36maccuracy_cal\u001b[1;34m(Predict, true_score)\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPredict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mPredict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mtrue_score\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mcount\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"predict: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPredict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -288,24 +276,21 @@
     "classifier = naive_bayes.MultinomialNB()\n",
     "classifier.fit(train_vec, Train_y)\n",
     "prediction = classifier.predict(test_vec)\n",
-    "accuracy = accuracy_cal(prediction, true_score)\n",
+    "#accuracy = accuracy_cal(prediction, true_score)\n",
     "# csv Naive Bayes Prediction------------------\n",
     "output_csv(\"perdiction_NaBa\", Predict, classifier.predict(predict_vec),true_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN\n",
-      "predict:  ['1' '0' '1' '0']\n",
-      "true_score:  ['0', '1', '0', '1']\n",
-      "accuracy:  0.0  %\n"
+      "KNN\n"
      ]
     }
    ],
@@ -319,25 +304,15 @@
     "classifier = KNeighborsClassifier(n_neighbors=3)\n",
     "classifier.fit(train_vec, Train_y)\n",
     "prediction = classifier.predict(test_vec)\n",
-    "accuracy = accuracy_cal(prediction, true_score)\n",
+    "#accuracy = accuracy_cal(prediction, true_score)\n",
     "output_csv(\"perdiction_knn\", Predict, classifier.predict(predict_vec),true_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "predict:  ['0' '0' '0' '0']\n",
-      "true_score:  ['0', '1', '0', '1']\n",
-      "accuracy:  50.0  %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SVM\n",
     "classifier = []\n",
@@ -347,25 +322,15 @@
     "classifier = svm.SVC()\n",
     "classifier.fit(train_vec, Train_y)\n",
     "prediction = classifier.predict(test_vec)\n",
-    "accuracy = accuracy_cal(prediction, true_score)\n",
+    "#accuracy = accuracy_cal(prediction, true_score)\n",
     "output_csv(\"perdiction_SVM\", Predict, classifier.predict(predict_vec),true_score)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "predict:  ['0' '0' '0' '0']\n",
-      "true_score:  ['0', '1', '0', '1']\n",
-      "accuracy:  50.0  %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Decison Tree\n",
     "classifier = []\n",
@@ -375,7 +340,7 @@
     "classifier = tree.DecisionTreeClassifier()\n",
     "classifier.fit(train_vec, Train_y)\n",
     "prediction = classifier.predict(test_vec)\n",
-    "accuracy = accuracy_cal(prediction, true_score)\n",
+    "#accuracy = accuracy_cal(prediction, true_score)\n",
     "output_csv(\"perdiction_DecTree\", Predict, classifier.predict(predict_vec),true_score)\n"
    ]
   },
